updates static menu

--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,189 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  font-family: , Times, serif, Helvetica, sans-serif;
+  background-color: rgb(244, 241, 239);
+  margin: 1rem;
+  padding: 5rem;
+}
+
+.topbar {
+  position: static;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  background-color: white;
+  height: 6rem;
+  z-index: 4;
+}
+
+img.banner {
+  object-fit: fill;
+  display: grid;
+  width: 6rem;
+  height: 6rem;
+  margin-left: 30rem;
+}
+.subbar {
+  position: static;
+  display: flex;
+  justify-content: center;
+  text-transform: capitalize;
+  align-items: center;
+  background-color: rgb(254, 125, 9);
+  color: white;
+  margin: 1rem;
+  padding: 5rem;
+  z-index: 2;
+}
+main {
+  margin: 1rem;
+  padding: 5rem;
+}
+
+h1 {
+  font-family: "chicken_sans_bold";
+  font-size: 80px;
+  text-align: justify;
+  font-weight: 100;
+  font-style: inherit;
+  justify-content: center;
+}
+
+h2 {
+  font-family: "chicken_sans_bold";
+  font-size: 30px;
+  text-align: center;
+  font-weight: 100;
+  font-style: inherit;
+}
+.subtitle {
+  text-align: center;
+  margin: 1rem auto 0 auto;
+  display: grid;
+  place-items: center; /*only useful if used with display grid*/
+  margin-block-start: 0.8em;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0px;
+  height: 60vh;
+}
+
+div {
+  font-family: "chicken_sans_bold";
+  font-size: 18px;
+  text-align: justify;
+  font-weight: 100;
+  font-style: inherit;
+  justify-content: center;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+}
+
+#cardcontainer {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+  align-items: center;
+  margin: 1rem;
+  padding: 5rem;
+}
+.previewCard {
+  background-color: white;
+  border-radius: 2%;
+  align-items: baseline;
+}
+.previewCard:hover {
+  cursor: pointer;
+}
+.cardContent {
+  margin: 0.8em;
+  height: 6rem;
+  font-style: normal;
+}
+
+h3 {
+  font-family: "chicken_sans_bold";
+  font-size: 20px;
+  text-align: justify;
+  font-weight: 100;
+  color: black;
+}
+h4 {
+  font-family: "chicken_sans_bold";
+  font-size: 18px;
+  text-align: justify;
+  font-weight: 100;
+  color: rgb(193, 119, 77);
+  text-transform: capitalize;
+}
+h5 {
+  font-family: "chicken_sans_bold";
+  font-size: 18px;
+  text-align: justify;
+  font-weight: 100;
+  color: white;
+  text-transform: capitalize;
+}
+h6 {
+  font-family: "chicken_sans_bold";
+  font-size: 13px;
+  text-align: justify;
+  font-weight: 100;
+  color: white;
+  text-transform: capitalize;
+}
+img {
+  width: 15rem;
+  height: 15rem;
+  object-fit: cover;
+  border-radius: 2%;
+  object-fit: cover;
+}
+
+footer {
+  box-sizing: border-box;
+  background-color: rgb(31, 31, 31);
+  color: rgb(255, 255, 255);
+  margin: 1rem;
+  padding: 5rem;
+}
+.footerlinks {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  gap: 3rem;
+}
+
+.footerlinkssmall {
+  display: flex;
+  justify-content: left;
+  gap: 1rem;
+}
+img.socialicons {
+  object-fit: contain;
+  border-radius: 100%;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: rgb(193, 119, 77);
+}
+
+.socialicons {
+  gap: 5rem;
+}
+
+@media (max-width: 50rem) {
+  header {
+    font-size: 0.5rem;
+  }
+  .mobile {
+    display: none;
+  }
+}
