--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,10 @@
 body {
   font-family: , Times, serif, Helvetica, sans-serif;
   background-color: rgb(244, 241, 239);
-  margin: 1rem;
-  padding: 5rem;
+  margin: 0;
 }
 
 .topbar {
-  position: static;
   position: fixed;
   top: 0;
   left: 0;
@@ -34,20 +32,17 @@ img.banner {
   margin-left: 30rem;
 }
 .subbar {
-  position: static;
-  display: flex;
-  justify-content: center;
   text-transform: capitalize;
-  align-items: center;
+  text-align: center;
   background-color: rgb(254, 125, 9);
   color: white;
-  margin: 1rem;
+  width: 100%;
   padding: 5rem;
   z-index: 2;
 }
 main {
-  margin: 1rem;
-  padding: 5rem;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
@@ -75,7 +70,6 @@ h2 {
   margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0px;
-  height: 60vh;
 }
 
 div {
@@ -97,8 +91,7 @@ a {
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
   align-items: center;
-  margin: 1rem;
-  padding: 5rem;
+  margin: 2rem;
 }
 .previewCard {
   background-color: white;
@@ -145,19 +138,17 @@ h6 {
   color: white;
   text-transform: capitalize;
 }
-img {
-  width: 15rem;
+.previewCard img {
+  width: 100%;
   height: 15rem;
   object-fit: cover;
   border-radius: 2%;
-  object-fit: cover;
 }
 
 footer {
   box-sizing: border-box;
   background-color: rgb(31, 31, 31);
   color: rgb(255, 255, 255);
-  margin: 1rem;
   padding: 5rem;
 }
 .footerlinks {
@@ -172,16 +163,24 @@ footer {
   justify-content: left;
   gap: 1rem;
 }
-img.socialicons {
-  object-fit: contain;
-  border-radius: 100%;
-  width: 1.5rem;
-  height: 1.5rem;
-  background-color: rgb(193, 119, 77);
+.socialicons {
+  width: 50%;
+  height: 50%;
 }
 
-.socialicons {
-  gap: 5rem;
+.socialiconswrapper a {
+  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: rgb(193, 119, 77);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.socialiconswrapper {
+  display: flex;
+  justify-content: space-evenly;
+  width: 200px;
 }
 
 @media (max-width: 50rem) {
